--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>E-Commerce</title>
 </head>
 <body>
-    <header class="">
-        <div class="">
+    <header class="container-fluid nav">
+        <div class="col-md-2 text-center">
             <p>Buscar<p>
         </div>
-        <div class="">
+        <div class="col-md-8 text-center">
             <img src="img/logo.png" alt="Logo del e-commerce">
         </div>
-        <div class="">
+        <div class="col-md-2 text-center">
             <a href="pages/log-in.html"><img src="img/icons/iconmonstr-user-20-48.png" alt=""></a>
         </div>
     </header>
-    <nav class="">
-        <ul class="">
-            <li class=""><a href="index.html" class="">Inicio</a></li>
-            <li class=""><a href="pages/products.html" class="">Todos los productos</a></li>
-            <li class=""><a href="pages/about-us.html" class="">Sobre Nosotros</a></li>
-            <li class=""><a href="pages/contact.html" class="">Contacto</a></li>
+    <nav class="container">
+        <ul class="nav">
+            <li class="nav-item col-md-3 text-center"><a href="index.html" class="nav-link">Inicio</a></li>
+            <li class="nav-item col-md-3 text-center"><a href="pages/products.html" class="nav-link">Todos los productos</a></li>
+            <li class="nav-item col-md-3 text-center"><a href="pages/about-us.html" class="nav-link">Sobre Nosotros</a></li>
+            <li class="nav-itemv col-md-3 text-center"><a href="pages/contact.html" class="nav-link">Contacto</a></li>
         </ul>
     </nav>
-    <main class="">
+    <main class="container">
         
-        <h3 class="">Productos destacados</h3>
+        <h3 class="h2 text-center">Productos destacados</h3>
 
         <section class="">
             <div class="img-containter">
@@ -115,10 +116,11 @@
                 </div>
             </div>
         </section>
-        <h3 class="products-tittle"><a href="pages/products.html" class="link"> Ver todos los productos</a></h3>
+        <h3 class="text-center"><a href="pages/products.html" class="link"> Ver todos los productos</a></h3>
     </main>
     <footer class="">
-        <h3>Social Media</h3>
+        <h3 class="text-center">Social Media</h3>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
