--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,36 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>About Us
     </title>
 </head>
 <body>
-    <header class="">
-        <div class="">
+    <header class="container-fluid nav">
+        <div class="col-md-2 text-center">
             <p>Buscar<p>
         </div>
-        <div class="">
+        <div class="col-md-8 text-center">
             <img src="../img/logo.png" alt="Logo del e-commerce">
         </div>
-        <div class="">
-            <a href="log-in.html"><img src="../img/icons/iconmonstr-user-20-48.png" alt=""></a>
+        <div class="col-md-2 text-center">
+            <a href="pages/log-in.html"><img src="../img/icons/iconmonstr-user-20-48.png" alt=""></a>
         </div>
-        
     </header>
-    <nav class="nav">
-        <ul class="nav-list">
-            <li class=""><a href="../index.html" class="">Inicio</a></li>
-            <li class=""><a href="products.html" class="">Todos los productos</a></li>
-            <li class=""><a href="about-us.html" class="">Sobre Nosotros</a></li>
-            <li class=""><a href="contact.html" class="">Contacto</a></li>
+    <nav class="container">
+        <ul class="nav">
+            <li class="nav-item col-md-3 text-center"><a href="../index.html" class="nav-link">Inicio</a></li>
+            <li class="nav-item col-md-3 text-center"><a href="products.html" class="nav-link">Todos los productos</a></li>
+            <li class="nav-item col-md-3 text-center"><a href="about-us.html" class="nav-link">Sobre Nosotros</a></li>
+            <li class="nav-itemv col-md-3 text-center"><a href="contact.html" class="nav-link">Contacto</a></li>
         </ul>
     </nav>
-    <main class=""">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae deleniti fugit ratione, voluptas repellat molestiae consequatur itaque aliquid laborum exercitationem fuga facilis eos cupiditate nobis dolor! Saepe minima quae beatae.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae deleniti fugit ratione, voluptas repellat molestiae consequatur itaque aliquid laborum exercitationem fuga facilis eos cupiditate nobis dolor! Saepe minima quae beatae.</p>        
+    <main class="container">
+            <p>E-Commerce tiene como objetivo la comercialización de prendas de vestir masculinas con un estilo urbano y moderno. Ofrecemos ropa cómoda y de muy buena calidad.</p>
+            <p>En nuestras tienda virtual encontraras siempre un portafolio de productos y servicios enfocados a la satisfacción del hombre que desea sentirse cómodo y a la moda.</p>
     </main>
-    <footer class="">
+    <footer class="container text-center">
         <h3>Social Media</h3>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
