--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,48 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Contact</title>
 </head>
 <body>
-    <header class="">
-        <div class="">
+    <header class="container-fluid nav">
+        <div class="col-md-2 text-center">
             <p>Buscar<p>
         </div>
-        <div class="">
+        <div class="col-md-8 text-center">
             <img src="../img/logo.png" alt="Logo del e-commerce">
         </div>
-        <div class="">
-            <a href="log-in.html"><img src="../img/icons/iconmonstr-user-20-48.png" alt=""></a>
+        <div class="col-md-2 text-center">
+            <a href="pages/log-in.html"><img src="../img/icons/iconmonstr-user-20-48.png" alt=""></a>
         </div>
     </header>
-    <nav class="">
-        <ul class="">
-            <li class=""><a href="../index.html" class="">Inicio</a></li>
-            <li class=""><a href="products.html" class="">Todos los productos</a></li>
-            <li class=""><a href="about-us.html" class="">Sobre Nosotros</a></li>
-            <li class=""><a href="contact.html" class="">Contacto</a></li>
+    <nav class="container">
+        <ul class="nav">
+            <li class="nav-item col-md-3 text-center"><a href="../index.html" class="nav-link">Inicio</a></li>
+            <li class="nav-item col-md-3 text-center"><a href="products.html" class="nav-link">Todos los productos</a></li>
+            <li class="nav-item col-md-3 text-center"><a href="about-us.html" class="nav-link">Sobre Nosotros</a></li>
+            <li class="nav-itemv col-md-3 text-center"><a href="contact.html" class="nav-link">Contacto</a></li>
         </ul>
     </nav>
-    <main class="">
-        <section class="">
+    <main class="container align-items-center">
 
-            <h3 class="tittle">Contacto</h3>
+            <h3 class="h2 text-center">Contacto</h3>
 
-            <form action="../index.html" class="">
+            <form action="../index.html" class="container form">
 
-                <div class="">
+                <div class="row">
                     <label for="">Nombre</label>
-                    <input type="text" placeholder="Nombre Apellido" class="" required>
+                    <input class="" type="text" placeholder="Nombre Apellido" class="" required>
                 </div>
 
-                <div class="">
+                <div class="row">
                     <label for="">Email</label>
-                    <input type="email" placeholder="ejemplo@mail.com" class="" required>
+                    <input class="" type="email" placeholder="ejemplo@mail.com" class="" required>
                 </div>
 
-                <div class="">
+                <div class="row">
                     <label for="subject">Asunto</label>
-                    <select name="subject" id="" class="input" required>
+                    <select class="" name="subject" id="" class="input" required>
                         <option name="subject" value="product">Productos</option>
                         <option name="subject" value="shipping">Envió</option>
                         <option name="subject" value="purchaseDone">Compra Realizada</option>
@@ -55,21 +55,20 @@
                     </select>
                 </div>
 
-                <div class="">
+                <div class="row">
                     <label for="message">Mensaje</label>
-                    <textarea name="message" id="" cols="21" rows="5" placeholder="Escriba su mensaje aqui" class="" required></textarea>
+                    <textarea class="" name="message" id="" cols="21" rows="5" placeholder="Escriba su mensaje aqui" class="" required></textarea>
                 </div>
                 
-                <div class="">
-                    <input type="submit" value="Enviar Mensaje" class="">
-                    <input type="reset" value="Limpiar Mensaje" class="">
+                <div class="row justify-content-between">
+                    <input class="col-2" type="submit" value="Enviar Mensaje" class="">
+                    <input class="col-2" type="reset" value="Limpiar Mensaje" class="">
                 </div>
-
             </form>
-        </section>
     </main>
-    <footer class="">
+    <footer class="container text-center">
         <h3>Social Media</h3>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
