--- a/index.html
+++ b/index.html
@@ -4,36 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>E-Commerce</title>
 </head>
 <body>
-    <header class="container-fluid nav">
-        <div class="col-md-2 text-center">
-            <p>Buscar<p>
+    <header class="container-fluid header">
+        <div class="row align-items-center">
+            <div class="col-md-2 text-center header__search">
+                <p>Buscar<p>
+            </div>
+            <div class="col-md-8 text-center header__logo">
+                <img src="img/logo2.png" alt="Logo del e-commerce">
+            </div>
+            <div class="col-md-2 text-center header__user">
+                <a href="pages/log-in.html"><img src="img/icons/iconmonstr-user-20-48.png" alt=""></a>
+            </div>
         </div>
-        <div class="col-md-8 text-center">
-            <img src="img/logo.png" alt="Logo del e-commerce">
-        </div>
-        <div class="col-md-2 text-center">
-            <a href="pages/log-in.html"><img src="img/icons/iconmonstr-user-20-48.png" alt=""></a>
-        </div>
+        
     </header>
-    <nav class="container">
-        <ul class="nav">
-            <li class="nav-item col-md-3 text-center"><a href="index.html" class="nav-link">Inicio</a></li>
-            <li class="nav-item col-md-3 text-center"><a href="pages/products.html" class="nav-link">Todos los productos</a></li>
-            <li class="nav-item col-md-3 text-center"><a href="pages/about-us.html" class="nav-link">Sobre Nosotros</a></li>
-            <li class="nav-itemv col-md-3 text-center"><a href="pages/contact.html" class="nav-link">Contacto</a></li>
+    <nav class="container nav-bar shadow">
+        <ul class="nav nav-list paddin-top-bottom-15">
+            <a href="index.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Inicio</li></a>
+            <a href="pages/products.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Todos los productos</li></a>
+            <a href="pages/about-us.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Sobre Nosotros</li></a>
+            <a href="pages/contact.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Contacto</li></a>
         </ul>
     </nav>
-    <main class="container">
+    <main class="container main-area shadow">
         
-        <h3 class="h2 text-center">Productos destacados</h3>
+        <h3 class="h3 text-center paddin-top-bottom-20">Productos destacados</h3>
 
-        <section class="">
+        <section class="grid-section grid-area">
             <div class="img-containter">
                 <div class="img-containter__img">
                     <img src="img/ropa/buzos/buzo001/22d0a714-9859-4140-a0fd-c5d17cb6a1e31-bb6268496dbb4b8d1b16216170415630-640-0.jpg" alt="">
@@ -116,9 +119,9 @@
                 </div>
             </div>
         </section>
-        <h3 class="text-center"><a href="pages/products.html" class="link"> Ver todos los productos</a></h3>
+        <h3 class="text-center h5 text-center paddin-top-bottom-20 link"><a href="pages/products.html" class="link"> Ver todos los productos</a></h3>
     </main>
-    <footer class="">
+    <footer class="conteinet-fluid footer">
         <h3 class="text-center">Social Media</h3>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
