--- a/pages/products.html
+++ b/pages/products.html
@@ -4,45 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Products</title>
 </head>
 <body>
-    <header class="container-fluid nav">
-        <div class="col-md-2 text-center">
-            <p>Buscar<p>
+    <header class="container-fluid header">
+        <div class="row align-items-center">
+            <div class="col-md-2 text-center header__search">
+                <p>Buscar<p>
+            </div>
+            <div class="col-md-8 text-center header__logo">
+                <img src="../img/logo2.png" alt="Logo del e-commerce">
+            </div>
+            <div class="col-md-2 text-center header__user">
+                <a href="log-in.html"><img src="../img/icons/iconmonstr-user-20-48.png" alt=""></a>
+            </div>
         </div>
-        <div class="col-md-8 text-center">
-            <img src="../img/logo.png" alt="Logo del e-commerce">
-        </div>
-        <div class="col-md-2 text-center">
-            <a href="pages/log-in.html"><img src="../img/icons/iconmonstr-user-20-48.png" alt=""></a>
-        </div>
+        
     </header>
-    <nav class="container">
-        <ul class="nav">
-            <li class="nav-item col-md-3 text-center"><a href="../index.html" class="nav-link">Inicio</a></li>
-            <li class="nav-item col-md-3 text-center"><a href="products.html" class="nav-link">Todos los productos</a></li>
-            <li class="nav-item col-md-3 text-center"><a href="about-us.html" class="nav-link">Sobre Nosotros</a></li>
-            <li class="nav-itemv col-md-3 text-center"><a href="contact.html" class="nav-link">Contacto</a></li>
+    <nav class="container nav-bar shadow">
+        <ul class="nav nav-list paddin-top-bottom-15">
+            <a href="../index.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Inicio</li></a>
+            <a href="products.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Todos los productos</li></a>
+            <a href="about-us.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Sobre Nosotros</li></a>
+            <a href="contact.html" class="link nav-item col-md-3 text-center nav-list__item"><li class="">Contacto</li></a>
         </ul>
     </nav>
-    <main class="container">
+    <main class="container main-area shadow paddin-top-bottom-20">
+
         <div class="row align-items-start">
             <div class="col-2">
                 <h4>Categorias</h4>
-                <ul>
-                    <li><a href="categories/hoodies.html" class="">Buzos</a></li>
-                    <li><a href="categories/shirts.html" class="">Camisas</a></li>
-                    <li><a href="categories/jackets.html" class="">Camperas</a></li>
-                    <li><a href="categories/pants.html" class="">Pantalones</a></li>
-                    <li><a href="categories/t-shirts.html" class="">Remeras</a></li>
+                <ul class="list">
+                    <a href="categories/hoodies.html" class="link"><li>Buzos</li></a>
+                    <a href="categories/shirts.html" class="link"><li>Camisas</li></a>
+                    <a href="categories/jackets.html" class="link"><li>Camperas</li></a>
+                    <a href="categories/pants.html" class="link"><li>Pantalones</li></a>
+                    <a href="categories/t-shirts.html" class="link"><li>Remeras</li></a>
                 </ul>
             </div>
 
-            <section class="col-10">
+            <section class="col-10 grid-section">
                 <div class="img-containter">
                     <div class="img-containter__img">
                         <img src="../img/ropa/buzos/buzo001/22d0a714-9859-4140-a0fd-c5d17cb6a1e31-bb6268496dbb4b8d1b16216170415630-640-0.jpg" alt="">
@@ -236,7 +240,7 @@
         </div>
         
     </main>
-    <footer class="container text-center">
+    <footer class="text-center footer">
         <h3>Social Media</h3>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
