--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="ecommerce,showroom,venta de ropa masculina,estilo urbano,ropa moderna,buzos,remeras,camperas,camisas,pantalones"/>
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>E-Commerce</title>
+    <title>E-Commerce de ropa masculina</title>
 </head>
 <body>
     <header class="container-fluid nav">
@@ -15,6 +16,10 @@
             <p>Buscar<p>
         </div>
         <div class="col-md-8 text-center">
+            <div><!--Ocultar con display:none-->
+                <h1>Venta de indumentaria masculina</h1>
+            </div>
+            
             <img src="img/logo.png" alt="Logo del e-commerce">
         </div>
         <div class="col-md-2 text-center">
@@ -36,7 +41,7 @@
         <section class="">
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/buzos/buzo001/22d0a714-9859-4140-a0fd-c5d17cb6a1e31-bb6268496dbb4b8d1b16216170415630-640-0.jpg" alt="">
+                    <img src="img/ropa/buzos/buzo001/22d0a714-9859-4140-a0fd-c5d17cb6a1e31-bb6268496dbb4b8d1b16216170415630-640-0.jpg" alt="Buzo ajustado gris">
                 </div>
                 <div class="img-containter__info">
                     <h4>Buzo 01</h4>
@@ -45,7 +50,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/camisas/camisa001/6ed679f0-fdd7-4f2f-a978-1cdeb4294ab11-bb0373d0826538460615877659766197-480-0.jpg" alt="">
+                    <img src="img/ropa/camisas/camisa001/6ed679f0-fdd7-4f2f-a978-1cdeb4294ab11-bb0373d0826538460615877659766197-480-0.jpg" alt="camisa de jean negra">
                 </div>
                 <div class="img-containter__info">
                     <h4>Camisa 01</h4>
@@ -54,7 +59,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/camperas/campera001/5f98d1b0-083a-4545-a7e0-e1edbe780bdf1-824af9ad466329cb3d16216115618287-480-0.jpg" alt="">
+                    <img src="img/ropa/camperas/campera001/5f98d1b0-083a-4545-a7e0-e1edbe780bdf1-824af9ad466329cb3d16216115618287-480-0.jpg" alt="campera azul,amarilla y gris">
                 </div>
                 <div class="img-containter__info">
                     <h4>Campera 01</h4>
@@ -63,7 +68,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/remeras/remera001/482b65f9-7973-4d50-a511-e0c2947b97f61-eb73e22ff365d07a1416216217268011-640-0.jpg" alt="">
+                    <img src="img/ropa/remeras/remera001/482b65f9-7973-4d50-a511-e0c2947b97f61-eb73e22ff365d07a1416216217268011-640-0.jpg" alt="remera con cuello negra con pequeños detalles blancos">
                 </div>
                 <div class="img-containter__info">
                     <h4>Remera 01</h4>
@@ -72,7 +77,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/buzos/buzo002/549ead71-f054-4c48-a35c-634b625cf2db1-c14a6655b34a22aa8d16211050004471-480-0.jpg" alt="">
+                    <img src="img/ropa/buzos/buzo002/549ead71-f054-4c48-a35c-634b625cf2db1-c14a6655b34a22aa8d16211050004471-480-0.jpg" alt="buzo suelto marrón, azul y blanco">
                 </div>
                 <div class="img-containter__info">
                     <h4>Buzo 02</h4>
@@ -81,7 +86,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/camperas/campera002/56936618-807f-4034-b052-1ef808ba1fef1-f0154c376b105887c716216103548297-480-0.jpg" alt="">
+                    <img src="img/ropa/camperas/campera002/56936618-807f-4034-b052-1ef808ba1fef1-f0154c376b105887c716216103548297-480-0.jpg" alt="campera de abrigo negra con capucha">
                 </div>
                 <div class="img-containter__info">
                     <h4>Campera 02</h4>
@@ -90,7 +95,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/remeras/remera002/e83efd19-1054-46e4-bb48-194580db59201-413b4757c4181e98fb16213681408027-640-0.jpg" alt="">
+                    <img src="img/ropa/remeras/remera002/e83efd19-1054-46e4-bb48-194580db59201-413b4757c4181e98fb16213681408027-640-0.jpg" alt="remera ajustada gris con estampado pequeño rosa">
                 </div>
                 <div class="img-containter__info">
                     <h4>Remera 02</h4>
@@ -99,7 +104,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/buzos/buzo003/b60da305-ab1d-45aa-8058-5cfd282ec8161-b92ea99a0cf890774016216222085237-480-0.jpg" alt="">
+                    <img src="img/ropa/buzos/buzo003/b60da305-ab1d-45aa-8058-5cfd282ec8161-b92ea99a0cf890774016216222085237-480-0.jpg" alt="buzo ajustado rosa">
                 </div>
                 <div class="img-containter__info">
                     <h4>Buzo 03</h4>
@@ -108,7 +113,7 @@
             </div>
             <div class="img-containter">
                 <div class="img-containter__img">
-                    <img src="img/ropa/camperas/campera003/3ec2ca5b-7068-4094-8040-129e329645ad1-58bb037f6f5d1c9bec16216109347709-640-0.jpg" alt="">
+                    <img src="img/ropa/camperas/campera003/3ec2ca5b-7068-4094-8040-129e329645ad1-58bb037f6f5d1c9bec16216109347709-640-0.jpg" alt="campera de jean azul">
                 </div>
                 <div class="img-containter__info">
                     <h4>Campera 03</h4>
