--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
                 <p>Buscar<p>
             </div>
             <div class="col-md-8 text-center header__logo">
-                <img src="img/logo2.png" alt="Logo del e-commerce">
+                <div>
+                    <img src="img/logo2.png" alt="Logo del e-commerce">
+                </div>
             </div>
             <div class="col-md-2 text-center header__user">
                 <a href="pages/log-in.html"><img src="img/icons/iconmonstr-user-20-48.png" alt=""></a>
             </div>
         </div>
-        
+        </div class="hidden">
+            <h1 class="hidden">Venta de indumentaria masculina</h1>
+        </div>
     </header>
     <nav class="container nav-bar shadow">
         <ul class="nav nav-list paddin-top-bottom-15">
