Se terminó se hacer la página responsive y se corrigieron algunos errores.

--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -97,7 +97,7 @@
 
             <div class="form__field">
                 <label for="message">Constraseña</label>
-                <input type="password" id="" cols="21" rows="5" placeholder="********************" class="input" required></input>
+                <input type="password" id="" cols="21" rows="5" placeholder="********************" class="input" required>
             </div>
             
             <div class="form__field--buttons">
