--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="pages/log-in.html"><img src="img/icons/iconmonstr-user-20-48.png" alt=""></a>
             </div>
         </div>
-        </div class="hidden">
+        <div class="hidden">
             <h1 class="hidden">Venta de indumentaria masculina</h1>
         </div>
     </header>
