--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -98,13 +98,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <img src="/img/showroom/img001.jpg" class="d-block w-100" alt="...">
+                <img src="../img/showroom/img001.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img src="/img/showroom/img002.jpg" class="d-block w-100" alt="...">
+                <img src="../img/showroom/img002.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img src="/img/showroom/img003.jpg" class="d-block w-100" alt="...">
+                <img src="../img/showroom/img003.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
