--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>E-Commerce de ropa masculina</title>
 </head>
 <body>
     <header class="container-fluid container-sm-fluid header">
         <div class="row align-items-center header-images">
             <div class="col-md-3 text-center header__cart">
-                <img src="img/icons/carrito.png" alt="">
+                <span class="iconify cart" data-icon="ant-design:shopping-cart-outlined"></span>
             </div>
             <div class="col-md-6 text-center header__logo">
                 <div>
@@ -22,7 +23,7 @@
                 </div>
             </div>
             <div class="col-md-3 text-center header__user">
-                <a href="pages/log-in.html"><img src="img/icons/iconmonstr-user-20-48.png" alt=""></a>
+                <a href="/pages/log-in.html" class="link"><span class="iconify account" data-icon="carbon:user-avatar"></span></a>
             </div>
         </div>
         <div class="hidden">
@@ -167,7 +168,18 @@
     </main>
     <footer class="conteinet-fluid footer">
         <h3 class="text-center">Social Media</h3>
+        <ul class="redes">
+            <li class="redes__item"><span class="iconify" data-icon="simple-icons:whatsapp"></span></li>
+            <li class="redes__item"><span class="iconify" data-icon="akar-icons:instagram-fill"></span></li>
+            <li class="redes__item"><span class="iconify" data-icon="akar-icons:facebook-fill"></span></li>
+            <li class="redes__item"><span class="iconify" data-icon="akar-icons:twitter-fill"></span></li>
+            <li class="redes__item"><span class="iconify" data-icon="cib:gmail"></span></li>
+        </ul>
+        <div class="derechos">
+           <p>2021 E-Commerce. Todos los derechos reservados</p> 
+        </div>
     </footer>
+    <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
