Se agregó interacción con el usuario (básica por el momento).

--- a/pages/products.html
+++ b/pages/products.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="img-containter">
                     <div class="img-containter__img">
-                        <img src="../img/ropa/buzos/buzo004/31b63598-b453-4609-bfe0-3f7989954d171-0bf65ab3c4a8f2d2aa15933689229284-640-0.jpg" alt="buzo marrón claro con inscripciones marroón oscuro">
+                        <img src="../img/ropa/buzos/buzo004/31b63598-b453-4609-bfe0-3f7989954d171-0bf65ab3c4a8f2d2aa15933689229284-640-0.jpg" alt="buzo marrón claro con inscripciones marrón oscuro">
                     </div>
                     <div class="img-containter__info">
                         <h4>Buzo 03</h4>
