Se cargan las imágenes del inicio mediante la creación de elementos del dom.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3 class="h3 text-center paddin-top-bottom-20">Productos destacados</h3>
 
         <section class="grid-section grid-area">
-            <div class="img-containter">
+            <!-- <div class="img-containter">
                 <div class="img-containter__img">
                     <img src="img/ropa/buzos/buzo001/22d0a714-9859-4140-a0fd-c5d17cb6a1e31-bb6268496dbb4b8d1b16216170415630-640-0.jpg" alt="Buzo ajustado gris">
                 </div>
@@ -162,7 +162,7 @@
                     <h4>Campera 03</h4>
                     <p>$4.780</p>
                 </div>
-            </div>
+            </div> -->
         </section>
         <h3 class="text-center h5 text-center paddin-top-bottom-20 link"><a href="pages/products.html" class="link"> Ver todos los productos</a></h3>
     </main>
