Se cargaron los JSON con los productos.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
 
     </footer>
-
+    <script src="js/db.js"></script>
     <script src="js/classes.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/nodes.js"></script>
