Ahora los productos aparecen de forma dinámica en el carrito.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="container-fluid container-sm-fluid header">
         <div class="row align-items-center header-images">
             <div class="col-md-3 text-center header__cart">
-                <a href="/pages/cart.html" class="link"><span class="iconify cart" data-icon="ant-design:shopping-cart-outlined"></span></a>
+                <a href="/pages/cart.html" class="link"><span class="iconify cart-icon" data-icon="ant-design:shopping-cart-outlined"></span></a>
             </div>
             <div class="col-md-6 text-center header__logo">
                 <div>
@@ -99,6 +99,7 @@
         </div>
     </footer>
     <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/app.js"></script>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
