--- a/pages/products.html
+++ b/pages/products.html
@@ -307,6 +307,7 @@
         </div>
     </footer>
     <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../js/utils.js"></script>
     <script src="../js/functions.js"></script>
     <script src="../js/app.js"></script>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
