Todo listo para la entrega final :D

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -14,7 +14,7 @@
     <header class="container-fluid container-sm-fluid header">
         <div class="row align-items-center header-images">
             <div class="col-md-3 text-center header__cart">
-                <a href="cart.html" class="link"><span class="iconify cart" data-icon="ant-design:shopping-cart-outlined"></span></a></div>
+                <a href="cart.html" class="link"><span class="iconify cart-icon" data-icon="ant-design:shopping-cart-outlined"></span></a></div>
             <div class="col-md-6 text-center header__logo">
                 <div>
                     <img src="../img/logo.png" alt="Logo del e-commerce">
