--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -13,7 +13,7 @@
     <header class="container-fluid container-sm-fluid header">
         <div class="row align-items-center header-images">
             <div class="col-md-3 text-center header__cart">
-                <a href="cart.html" class="link"><span class="iconify cart" data-icon="ant-design:shopping-cart-outlined"></span></a>
+                <a href="cart.html" class="link"><span class="iconify cart-icon" data-icon="ant-design:shopping-cart-outlined"></span></a>
             </div>
             <div class="col-md-6 text-center header__logo">
                 <div>
